# pytorch-exercises

./: README.md  main.py  pyproject.toml
exercises/: module0.ipynb  module1.ipynb  module2.ipynb
exercises/models/: module1_linear_regression.pth
