[project]
name = "pytorchexercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.8.0",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
